--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
   padding:0;
   box-sizing: border-box;
 }
+
 ::-webkit-scrollbar-track
 {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -35,7 +36,7 @@ a{
   color: rgb(238, 238, 238);
 }
 body{
-  background-color:#393A59;
+  background-color:#202020;
 
   height: 100vh;
   font-family: 'Fira Code', monospace;
@@ -47,10 +48,10 @@ body{
   display:flex;
   flex-direction: column;
   width:100%;
-  max-width:800px;
-  height:500px;
+  max-width:1400px;
+  height:750px;
   overflow: hidden;
-  border-radius: 6px;
+  border-radius: 11px;
   border: 1px solid gray;
   margin:20px;
   cursor: text;
@@ -82,7 +83,7 @@ div.title{
   text-align:center;
 }
 .menu h1{
-  font-size:13px;
+  font-size:15px;
   color:#9c9c9c;
 
 }
@@ -113,12 +114,12 @@ div.title{
   overflow: auto;
 }
 p{
-  font-size:16px;
+  font-size:18px;
   color:rgb(238, 238, 238);
   padding:8px 0;
 }
 h2{
-  font-size:16px;
+  font-size:18px;
   color:rgb(238, 238, 238);
 }
 p.code{
@@ -154,7 +155,7 @@ input{
   background-color: unset;
   color:rgb(238, 238, 238);
   width:100%;
-  font-size:16px;
+  font-size:18px;
   font-family: 'Fira Code', monospace;
 }
 input:focus{
