--- a/styles/main.css
+++ b/styles/main.css
@@ -1,195 +1,197 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-::-webkit-scrollbar-track
-{
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	
-	background-color: #555;
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+
+  background-color: #555;
 }
 
-::-webkit-scrollbar
-{
-	width: 12px;
-	background-color: #555;
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: #555;
 }
 
-::-webkit-scrollbar-thumb
-{
+::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: rgb(129, 129, 129);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: rgb(129, 129, 129);
 }
-.white{
-  color:rgb(238, 238, 238);
+.white {
+  color: rgb(238, 238, 238);
 }
-.blue{
-  color:#9CEAF3;
+.blue {
+  color: #9ceaf3;
 }
-a{
+a {
   text-decoration: none;
   color: rgb(238, 238, 238);
 }
-body{
-  background-color:#202020;
+body {
+  background-color: #121212;
 
   height: 100vh;
-  font-family: 'Fira Code', monospace;
-  display:flex;
+  font-family: "Fira Code", monospace;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
-.container{
-  display:flex;
+
+.container {
+  display: flex;
   flex-direction: column;
-  width:100%;
-  max-width:1400px;
-  height:750px;
+  width: 100%;
+  max-width: 1400px;
+  height: 750px;
   overflow: hidden;
   border-radius: 11px;
-  border: 1px solid gray;
-  margin:20px;
+  border: 1px solid rgb(41, 41, 41);
+  margin: 20px;
   cursor: text;
 }
-.menu{
-  display:flex;
+.menu {
+  display: flex;
   align-items: center;
-
   text-align: center;
   flex-direction: row;
   width: 100%;
   height: 24px;
-  background-color: #424040;
+  background-color: #413f3f;
   padding: 0 8px;
-  cursor:default;
+  cursor: default;
 }
-.menu .button{
-  width:12px;
-  height:12px;
-  border-radius:50%;
-  margin-right:8px;
-  cursor:pointer;
+.menu .button {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  margin-right: 8px;
+  cursor: pointer;
 }
-.red{background-color:#F5544D;}
-.yellow{background-color:#FABD2F;}
-.green{background-color:#47D043;}
-div.title{
-  flex:1;
-  text-align:center;
+.red {
+  background-color: #f5544d;
 }
-.menu h1{
-  font-size:15px;
-  color:#9c9c9c;
-
+.yellow {
+  background-color: #fabd2f;
 }
-.buttons-flex{
+.green {
+  background-color: #47d043;
+}
+div.title {
+  flex: 1;
+  text-align: center;
+}
+.menu h1 {
+  font-size: 15px;
+  color: #9c9c9c;
+}
+.buttons-flex {
   position: absolute;
-  display:flex;
+  display: flex;
   flex-direction: row;
 }
-@media (max-width:500px){
-  .buttons-flex{
+@media (max-width: 500px) {
+  .buttons-flex {
     position: unset;
-    display:flex;
+    display: flex;
     flex-direction: row;
   }
 }
-@media (max-width:330px){
-  .menu h1{
-    display:none;
+@media (max-width: 330px) {
+  .menu h1 {
+    display: none;
   }
 }
-#app{
-  display:flex;
+#app {
+  display: flex;
   flex-direction: column;
-  background-color:#282A35;
-  width:100%;
-  height:100%;
-  padding:8px;
+  background-color: #222222;
+  width: 100%;
+  height: 100%;
+  padding: 8px;
   overflow: auto;
 }
-p{
-  font-size:18px;
-  color:rgb(238, 238, 238);
-  padding:8px 0;
+p {
+  font-size: 18px;
+  color: rgb(238, 238, 238);
+  padding: 8px 0;
 }
-h2{
-  font-size:18px;
-  color:rgb(238, 238, 238);
+h2 {
+  font-size: 18px;
+  color: rgb(238, 238, 238);
 }
-p.code{
-  color:#66C2CD;
-  margin-left:8px;
+p.code {
+  color: #66c2cd;
+  margin-left: 8px;
 }
-span.text{
-  margin-left:16px;
-  color:white;
+span.text {
+  margin-left: 16px;
+  color: white;
 }
-p.path{
-  color:#F7FCA0;
+p.path {
+  color: #f7fca0;
 }
-p.path span{
-  color:#6A77D2;
+p.path span {
+  color: #6a77d2;
 }
-p.path span + span{
-  color:#9CEAF3;
-}
-
-.sucess{
-  color:#5AD786;
-}
-.error{
-  color:#F78F85;
-}
-p.response{
-  color:rgb(238, 238, 238);
+p.path span + span {
+  color: #9ceaf3;
 }
 
-input{
-  border:none;
+.sucess {
+  color: #5ad786;
+}
+.error {
+  color: #f78f85;
+}
+p.response {
+  color: rgb(238, 238, 238);
+}
+
+input {
+  border: none;
   background-color: unset;
-  color:rgb(238, 238, 238);
-  width:100%;
-  font-size:18px;
-  font-family: 'Fira Code', monospace;
+  color: rgb(238, 238, 238);
+  width: 100%;
+  font-size: 18px;
+  font-family: "Fira Code", monospace;
   caret-color: white;
 }
 
-input:focus{
+input:focus {
   border: white;
   outline: none;
   box-shadow: none;
   background-color: unset;
 }
 
-.type{
-  display:flex;
+.type {
+  display: flex;
   align-items: center;
-  padding:8px 0;
+  padding: 8px 0;
 }
-.type2{
-  display:flex;
+.type2 {
+  display: flex;
   align-items: center;
-  padding:8px 0;
+  padding: 8px 0;
 }
-.icone{
-  color:#5AD786;
-  padding-right:8px;
+.icone {
+  color: #5ad786;
+  padding-right: 8px;
 }
 
-.icone.error{
-  color:#F78F85;
+.icone.error {
+  color: #f78f85;
 }
 
 #cursor {
   background: white;
   line-height: 20px;
-  margin-top : 10px;
+  margin-top: 10px;
   margin-left: 3px;
   animation: blink 0.5s infinite;
   width: 7px;
@@ -197,7 +199,13 @@ input:focus{
 }
 
 @keyframes blink {
-  0% {background: #424040}
-  50% {background: white}
-  100% {background: #424040}
+  0% {
+    background: #424040;
+  }
+  50% {
+    background: white;
+  }
+  100% {
+    background: #424040;
+  }
 }
